--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="container">
-            <h1>To-Do List</h1>
+            <h1>To-Do List <img src="images/mark_15630604.png" alt="todo-logo" width="50px" height="50px"></h1>
             <div class="search-bar">
                 <input type="text" id="task-input" placeholder="type your task to add">
                 <button id="add">Add</button>
