added checkmark and delete functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo-App</title>
+    <link rel="shortcut icon" href="images/mark_15630604.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,11 +16,9 @@
                 <input type="text" id="task-input" placeholder="type your task to add">
                 <button id="add">Add</button>
             </div>
-            <div class="todo-list">
                 <div class="task-container">
                     
                 </div>
-            </div>
         </div>
     </main>
 <script src="index.js"></script>
